Add Visual DOM json

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "express": "^4.14.0",
     "material-ui": "^0.16.4",
     "mongoose": "^4.6.8",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "react-validation": "^2.10.9",
